test_suite5/ALAN/test_suite/alan-2022-examples/failing/001430_mutation.alan
source c752 begin call _0(2, / 9) end
